# configuration

./: .travis.opam  Makefile  Makefile.config.in  Makefile.inc  README.md  configure.ac  index.html  params.json
manual/: .gitignore  Makefile  intro.text
meta/: Makefile  configuration.in
opam/: opam
src/: Makefile  configuration_Map.ml  configuration_Map.mli  configuration_Parser.mli  configuration_Parser.mll
testsuite/: Makefile
testsuite/trip-trap/: Makefile  test_configuration.ml
testsuite/unit-testing/: Makefile  main.ml  testConfigurationMap.ml
v0.4.1/: Configuration_Map.html  Configuration_Parser.Definition.html  Configuration_Parser.Make.html  Configuration_Parser.S.html  Configuration_Parser.html  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  type_Configuration_Map.html  type_Configuration_Parser.Definition.html  type_Configuration_Parser.Make.html  type_Configuration_Parser.S.html  type_Configuration_Parser.html
