### configure.ac -- Autoconf

# Author: Michael Grünewald
# Date: Thu Nov  7 07:27:36 CET 2013

# Configuration (https://github.com/michipili/configuration)
# This file is part of Configuration
#
# Copyright © 2012–2015 Michael Grünewald
#
# This file must be used under the terms of the CeCILL-B.
# This source file is licensed as described in the file COPYING, which
# you should have received as part of this distribution. The terms
# are also available at
# http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt

AC_INIT([meta/configuration.in])
AC_CONFIG_MACRO_DIR([Library/Autoconf])
AC_NEED_OCAML
AC_NEED_FINDLIB
AC_WITH_OCAML_SITE_LIB
AC_CONFIG_FILES([Makefile.config meta/configuration])
AC_OUTPUT

### End of file `configure.ac'
